--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 	<meta name="twitter:description" content="33web è uno studio di consulenti di marketing online di esperienza più che decennale. Siamo specializzati in Search Marketing, Ecommerce e Social Media.">
 	<meta name="twitter:image" content="https://www.33web.it/images/og-image-1200x630.jpg">
 	
-	<link rel="preload" fetchpriority="high" as="image" href="images/header-image-04_mobile.jpg" type="image/jpg">
-	<link rel="preload" fetchpriority="high" as="image" href="images/header-image-04.jpg" type="image/jpg">
+	<link rel="preload" fetchpriority="high" as="image" href="images/header-image-04_mobile.jpg" type="image/jpg" media="(max-width: 768px)">
+	<link rel="preload" fetchpriority="high" as="image" href="images/header-image-04.jpg" type="image/jpg" media="(min-width: 769px)">
 	<link rel="stylesheet" href="stili.css">
 
     <script>
