--- a/search-marketing.html
+++ b/search-marketing.html
@@ -24,8 +24,8 @@
 	<meta name="twitter:description" content="I tuoi clienti cercano online i tuoi prodotti e servizi: sei pronto a farti trovare? Scopri cosa sappiamo fare e chiedici di più!">
 	<meta name="twitter:image" content="https://www.33web.it/images/bg-search-marketing_og.jpg">
 
-	<link rel="preload" fetchpriority="high" as="image" href="images/bg-search-marketing_mobile.jpg" type="image/jpg">
-	<link rel="preload" fetchpriority="high" as="image" href="images/bg-search-marketing.jpg" type="image/jpg">
+	<link rel="preload" fetchpriority="high" as="image" href="images/bg-search-marketing_mobile.jpg" type="image/jpg" media="(max-width: 768px)">
+	<link rel="preload" fetchpriority="high" as="image" href="images/bg-search-marketing.jpg" type="image/jpg" media="(min-width: 769px)">
 	<link rel="stylesheet" href="stili.css">
 
     <script>
