--- a/search-marketing.html
+++ b/search-marketing.html
@@ -108,7 +108,7 @@
 			</div>
 			<div class="service-card">
 				<h3>Perché dovresti contattarci</h3>
-				<p>Non siamo venditori di Google, non siamo smanettoni. Sappiamo esattamente quello che le aziende vogliono ottenere dalle attività di marketing e la comunicazione sui motori di ricerca non fa eccezione.</p>
+				<p>Non siamo venditori di Google, non siamo smanettoni. Conosciamo le regole del marketing e gli obiettivi delle aziende. Sappiamo come orchestrare la comunicazione sui motori di ricerca per aiutarle a raggiungerli.</p>
 				<p>Il nostro scopo è quello di permettere ai nostri clienti di <strong>incontrare la domanda di mercato</strong> con la loro offerta di prodotti o servizi, e di farlo nel modo più diretto possibile.</p>
 				<a href="mailto:preventivi@33web.it" class="cta-button"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="currentColor" d="M22 6c0-1.1-.9-2-2-2H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2zm-2 0l-8 5l-8-5zm0 12H4V8l8 5l8-5z"/></svg>Chiedi una consulenza</a>
 				
