--- a/chi-siamo.html
+++ b/chi-siamo.html
@@ -53,7 +53,7 @@
 				<li>
 					<a href="search-marketing.html">Search Marketing</a>
 					<ul class="submenu">
-						<li><a href="#seo">Ottimizzazione (SEO)</a></li>
+						<li><a href="seo.html">Ottimizzazione (SEO)</a></li>
 						<li><a href="#ppc">Campagne PPC</a></li>
 					</ul>				
 				</li>
@@ -130,8 +130,10 @@
 				</div>
 				<div class="profile-right">
 					<h3>Elisa Poli</h3>
-					<p>[Placeholder] Bio in fase di scrittura. Elisa è una figura fondamentale nel team, con competenze che verranno descritte più approfonditamente a breve.</p>
-					<p>[Esempio] Elisa è specializzata in strategie ecommerce e ottimizzazione della user experience. Ha una passione per i dettagli che fanno la differenza nelle vendite online.</p>
+					<p>Nel 2013 inizia a lavorare nel campo della vendita on-line come ideatrice e responsabile di 33 Mani, e-commerce di rivendita prodotti artigianali trentini.</p>
+					<p>Negli anni di gestione accumula esperienza in diversi campi legati alla vendita on-line, a partire dalla gestione del catalogo, come anche gli ordini, la logistica, il rapporto con i fornitori e tutto quello che serve per gestire un negozio online, senza dimenticare il servizio clienti.</p>
+					<p>Archiviata l'attività di venditrice, oggi mette a disposizione questa conoscenza trasversale per aiutare le aziende che vogliono <a href="#">vendere online</a> ad affrontare le criticità che nascono in fase di progettazione, integrazione e gestione di qualunque ecommerce.</p>
+					<p>È particolarmente attenta agli aspetti di gestione dei progetti e per questo è considerata l'anima dello studio 33web, di cui è la titolare.</p>
 				</div>
 			</div>
 			<div class="team-member">
