--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 				<li>
 					<a href="search-marketing.html">Search Marketing</a>
 					<ul class="submenu">
-						<li><a href="#seo">Ottimizzazione (SEO)</a></li>
+						<li><a href="seo.html">Ottimizzazione (SEO)</a></li>
 						<li><a href="#ppc">Campagne PPC</a></li>
 					</ul>				
 				</li>
