--- a/template-servizi.html
+++ b/template-servizi.html
@@ -8,11 +8,11 @@
     <link rel="apple-touch-icon" href="icons/apple-touch-icon.png">
     <link rel="manifest" href="icons/site.webmanifest">
     <link rel="shortcut icon" href="icons/favicon.ico">
-    <title>Consulenza marketing e visibilità sui motori di ricerca | 33web</title>
-	<meta name="description" content="I tuoi clienti cercano online i tuoi prodotti e servizi: sei pronto a farti trovare? Scopri cosa sappiamo fare e chiedici di più!">
+    <title>[TITLE] | 33web</title>
+	<meta name="description" content="[DESCRIPTION]">
 	<!-- Open Graph meta tags -->
-	<meta property="og:title" content="Consulenza marketing e visibilità sui motori di ricerca | 33web">
-	<meta property="og:description" content="I tuoi clienti cercano online i tuoi prodotti e servizi: sei pronto a farti trovare? Scopri cosa sappiamo fare e chiedici di più!">
+	<meta property="og:title" content="[TITLE] | 33web">
+	<meta property="og:description" content="[DESCRIPTION]">
 	<meta property="og:image" content="https://www.33web.it/images/bg-search-marketing_og.jpg">
 	<meta property="og:image:width" content="1200">
 	<meta property="og:image:height" content="630">
@@ -20,8 +20,8 @@
 	<meta property="og:site_name" content="33web">
 	<meta property="og:locale" content="it_IT">
 	<meta name="twitter:card" content="summary_large_image">
-	<meta name="twitter:title" content="Consulenza marketing e visibilità sui motori di ricerca | 33web">
-	<meta name="twitter:description" content="I tuoi clienti cercano online i tuoi prodotti e servizi: sei pronto a farti trovare? Scopri cosa sappiamo fare e chiedici di più!">
+	<meta name="twitter:title" content="[TITLE] | 33web">
+	<meta name="twitter:description" content="[DESCRIPTION]">
 	<meta name="twitter:image" content="https://www.33web.it/images/bg-search-marketing_og.jpg">
 
 	<link rel="preload" fetchpriority="high" as="image" href="images/bg-search-marketing_mobile.jpg" type="image/jpg" media="(max-width: 768px)">
@@ -41,7 +41,7 @@
 	</script>
 
 </head>
-<body class="servizi search-marketing">
+<body class="servizi [nome-servizio]">
     <!-- Navbar -->
     <nav class="navbar">
     <div class="logo">
@@ -53,7 +53,7 @@
 				<li>
 					<a href="search-marketing.html">Search Marketing</a>
 					<ul class="submenu">
-						<li><a href="seo.html">Ottimizzazione (SEO)</a></li>
+						<li><a href="#seo">Ottimizzazione (SEO)</a></li>
 						<li><a href="#ppc">Campagne PPC</a></li>
 					</ul>				
 				</li>
@@ -88,28 +88,24 @@
     <!-- Header Image -->
     <div class="header-image">
         <div class="header-logo">
-            <img src="images/loupe_128.png" alt="Icona Search Marketing">
-            <p class="subtitle">Search Marketing</p>
+            <img src="images/loupe_128.png" alt="33web Logo">
+            <p class="subtitle">[Nome servizio]</p>
         </div>
     </div>
 
     <!-- Contenuto Principale -->
     <div class="container">
-        <h1>Fatti trovare sui motori di ricerca</h1>
-        <p>Il Search Marketing è il cuore della visibilità online. Combinando SEO (Search Engine Optimization) e campagne PPC (Pay Per Clic) su Google Ads, ci assicuriamo che la tua attività sia visibile al pubblico giusto, al momento giusto.</p>
+        <h1>[Titolo h1 servizio]</h1>
+        <p>[Descrizione introduttiva servizio]</p>
         
 		<div class="service-details">
 			<div class="service-card">
-				<h2>È meglio fare SEO o Pay Per Clic?</h2>
-				<p>La risposta è: entrambe!</p>
-				<p>Una <strong>visione d'insieme</strong> del mercato di ricerca è importante per assicurarsi la <strong>massima visibilità</strong> da parte del pubblico, al tempo stesso assicurandosi di investire i budget pubblicitari con <strong>efficienza</strong>.</p>
-				<p>Noi consideriamo il motore di ricerca come un <strong>canale</strong> che le persone utilizzano tutti i giorni per <strong>trovare le cose</strong> che stanno cercando, siano esse informazioni, luoghi da visitare o prodotti da acquistare.</p>
-				<p>In questo scenario il posizionamento organico e quello sponsorizzato non sono in concorrenza, bensì sono <strong>strumenti complementari</strong> e se armonizzati correttamente permettono di ottenere risultati positivi <strong>duraturi</strong>.</p>
+				<h2>[Titolo h2 lancio servizio]</h2>
+				<p>[Descrizione estesa servizio]</p>
 			</div>
 			<div class="service-card">
 				<h3>Perché dovresti contattarci</h3>
-				<p>Non siamo venditori di Google, non siamo smanettoni. Conosciamo le regole del marketing e gli obiettivi delle aziende. Sappiamo come orchestrare la comunicazione sui motori di ricerca per aiutarle a raggiungerli.</p>
-				<p>Il nostro scopo è quello di permettere ai nostri clienti di <strong>incontrare la domanda di mercato</strong> con la loro offerta di prodotti o servizi, e di farlo nel modo più diretto possibile.</p>
+				<p>[Pitch vendita servizio]</p>
 				<a href="mailto:preventivi@33web.it" class="cta-button"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="currentColor" d="M22 6c0-1.1-.9-2-2-2H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2zm-2 0l-8 5l-8-5zm0 12H4V8l8 5l8-5z"/></svg>Chiedi una consulenza</a>
 				
 			</div>
@@ -118,7 +114,7 @@
 	
 	<!-- Services section -->
 	<div class="services">
-	<h2>Per la tua strategia di Search Marketing</h2>
+	<h2>Per la tua strategia di [Servizio]</h2>
 	<div class="services-boxes">
 		<div class="service-box">
 			<div class="service-header">
@@ -126,7 +122,7 @@
 				<h3>Ottimizzazione (SEO)</h3>
 			</div>
 			<p>Analisi del pubblico e ottimizzazione della visibilità organica.</p>
-			<a href="seo.html">></a>
+			<a href="#">></a>
 		</div>
 	
 		<div class="service-box">
@@ -152,7 +148,7 @@
 	
 	<!-- Team Section -->
 	<div class="team">
-		<h2>Specialista di Search Marketing</h2>
+		<h2>Specialista di [Servizio]</h2>
 		<div class="team-profiles">
 			<div class="team-member">
 				<img src="images/martino-mosna.jpg" alt="Martino Mosna" class="team-avatar">
