--- a/seo.html
+++ b/seo.html
@@ -103,12 +103,12 @@
 				<h2>Vale ancora la pena fare SEO oggi?</h2>
 				<p><strong>Non amiamo i trucchi</strong> o le tattiche di corto respiro: fare SEO non significa per forza “battere l’algoritmo” o “ingannare il sistema”. Al contrario, è un <strong>processo di allineamento</strong>: capire come i motori di ricerca vedono il web e posizionare il tuo sito come una <strong>risposta valida</strong> e autorevole per chi <strong>cerca</strong> proprio ciò che offri.</p>
 				<p>La conoscenza della <strong>tecnologia</strong> dei motori di ricerca incontra l'analisi di <strong>marketing strategico</strong>, si traduce poi in indicazioni progettuali che permettono di migliorare l'accessibilità dei contenuti e la loro <strong>reperibilità nei risultati di ricerca</strong>.</p>
-				<p>Finché esisterà la necessità delle persone di <strong>cercare qualcosa online</strong>, ci sarà bisogno di ottimizzare il processo di ricerca, tanto sul piano tecnologico quanto su quello della comunicazione.</p>
+				<p>Finché le persone avranno bisogno di <strong>cercare online</strong>, ottimizzare la ricerca sarà essenziale, sia dal punto di vista tecnologico che comunicativo.</p>
 			</div>
 			<div class="service-card">
 				<h3>Perché dovresti contattarci</h3>
 				<p>Non siamo maghi, ninja o guru della SEO, non crediamo nei trucchi. Crediamo nella <strong>strategia</strong>.</p>
-				<p>Le nostre metodologie partono dal <strong>pubblico</strong>, ci guidano con l'analisi degli <strong>intenti di ricerca</strong> e delle <strong>keywords</strong>, ci permettono di progettare <strong>architetture del contenuto</strong> efficaci e ci portano ad ottimizzare tutti gli elementi del <strong>contenuto</strong> rilevanti per la visibilità organica (<em>PIKAC!</em>).</p>
+				<p>Le nostre metodologie partono dal <strong>pubblico</strong>, ci guidano con l'analisi degli <strong>intenti di ricerca</strong> e delle <strong>keywords</strong>, ci permettono di progettare <strong>architetture del contenuto</strong> efficaci e ci portano ad ottimizzare tutti gli elementi del <strong>contenuto</strong> rilevanti per la visibilità organica (In una parola: <em><a href="download/Martino%20Mosna%20-%20Slide%20Search%20Marketing%20Connect%202018.pdf">PIKAC!</a></em>).</p>
 				<p>Il nostro obiettivo è quello di creare una strategia di ottimizzazione che non solo migliori il tuo <strong>posizionamento</strong>, ma che valorizzi la tua offerta e rispecchi al meglio la tua <strong>identità di marca</strong>.</p>
 				<a href="mailto:preventivi@33web.it" class="cta-button"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="currentColor" d="M22 6c0-1.1-.9-2-2-2H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2zm-2 0l-8 5l-8-5zm0 12H4V8l8 5l8-5z"/></svg>Chiedi una consulenza</a>
 				
