Immagini pagina SEO

--- a/seo.html
+++ b/seo.html
@@ -13,7 +13,7 @@
 	<!-- Open Graph meta tags -->
 	<meta property="og:title" content="Consulenza SEO e posizionamento sui motori di ricerca | 33web">
 	<meta property="og:description" content="[DESCRIPTION]">
-	<meta property="og:image" content="https://www.33web.it/images/bg-search-marketing_og.jpg">
+	<meta property="og:image" content="https://www.33web.it/images/bg-seo_og.jpg">
 	<meta property="og:image:width" content="1200">
 	<meta property="og:image:height" content="630">
 	<meta property="og:type" content="website">
@@ -22,10 +22,10 @@
 	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:title" content="Consulenza SEO e posizionamento sui motori di ricerca | 33web">
 	<meta name="twitter:description" content="[DESCRIPTION]">
-	<meta name="twitter:image" content="https://www.33web.it/images/bg-search-marketing_og.jpg">
+	<meta name="twitter:image" content="https://www.33web.it/images/bg-seo_og.jpg">
 
-	<link rel="preload" fetchpriority="high" as="image" href="images/bg-search-marketing_mobile.jpg" type="image/jpg" media="(max-width: 768px)">
-	<link rel="preload" fetchpriority="high" as="image" href="images/bg-search-marketing.jpg" type="image/jpg" media="(min-width: 769px)">
+	<link rel="preload" fetchpriority="high" as="image" href="images/bg-seo_mobile.jpg" type="image/jpg" media="(max-width: 768px)">
+	<link rel="preload" fetchpriority="high" as="image" href="images/bg-seo.jpg" type="image/jpg" media="(min-width: 769px)">
 	<link rel="stylesheet" href="stili.css">
 
     <script>
@@ -41,7 +41,7 @@
 	</script>
 
 </head>
-<body class="servizi [nome-servizio]">
+<body class="servizi seo">
     <!-- Navbar -->
     <nav class="navbar">
     <div class="logo">
