--- a/seo.html
+++ b/seo.html
@@ -9,10 +9,10 @@
     <link rel="manifest" href="icons/site.webmanifest">
     <link rel="shortcut icon" href="icons/favicon.ico">
     <title>Consulenza SEO e posizionamento sui motori di ricerca | 33web</title>
-	<meta name="description" content="[DESCRIPTION]">
+	<meta name="description" content="Ottimizza la comunicazione sui motori di ricerca per farti trovare dal tuo pubblico. Scopri cosa sappiamo fare e chiedici di più!">
 	<!-- Open Graph meta tags -->
 	<meta property="og:title" content="Consulenza SEO e posizionamento sui motori di ricerca | 33web">
-	<meta property="og:description" content="[DESCRIPTION]">
+	<meta property="og:description" content="Ottimizza la comunicazione sui motori di ricerca per farti trovare dal tuo pubblico. Scopri cosa sappiamo fare e chiedici di più!">
 	<meta property="og:image" content="https://www.33web.it/images/bg-seo_og.jpg">
 	<meta property="og:image:width" content="1200">
 	<meta property="og:image:height" content="630">
@@ -21,7 +21,7 @@
 	<meta property="og:locale" content="it_IT">
 	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:title" content="Consulenza SEO e posizionamento sui motori di ricerca | 33web">
-	<meta name="twitter:description" content="[DESCRIPTION]">
+	<meta name="twitter:description" content="Ottimizza la comunicazione sui motori di ricerca per farti trovare dal tuo pubblico. Scopri cosa sappiamo fare e chiedici di più!">
 	<meta name="twitter:image" content="https://www.33web.it/images/bg-seo_og.jpg">
 
 	<link rel="preload" fetchpriority="high" as="image" href="images/bg-seo_mobile.jpg" type="image/jpg" media="(max-width: 768px)">
