--- a/seo.html
+++ b/seo.html
@@ -103,7 +103,7 @@
 				<h2>Vale ancora la pena fare SEO oggi?</h2>
 				<p>In breve, sì: finché le persone avranno bisogno di <strong>cercare online</strong>, ottimizzare la ricerca sarà essenziale, sia dal punto di vista tecnologico che comunicativo.</p>
 				<p>Rimane per questo necessario unire la conoscenza della <strong>tecnologia</strong> dei motori di ricerca con l'analisi di <strong>marketing strategico</strong>. La giusta metodologia di lavoro permette così di dare indicazioni progettuali che permettano di migliorare l'accessibilità dei contenuti e la loro <strong>reperibilità nei risultati di ricerca</strong>.</p>
-				<p><strong>Non amiamo i trucchi</strong> o le tattiche di corto respiro: fare SEO non significa per forza “battere l’algoritmo” o “ingannare il sistema”. Al contrario, è un <strong>processo di allineamento</strong>: capire come i motori di ricerca vedono il web e posizionare il tuo sito come una <strong>risposta valida</strong> e autorevole per chi <strong>cerca</strong> proprio ciò che offri.</p>				
+				<p><strong>Non amiamo le scorciatoie</strong> o le tattiche di corto respiro: fare SEO non significa per forza “battere l’algoritmo” o “ingannare il sistema”. Al contrario, è un <strong>processo di allineamento</strong>: capire come i motori di ricerca vedono il web e posizionare il tuo sito come una <strong>risposta valida</strong> e autorevole per chi <strong>cerca</strong> proprio ciò che offri.</p>				
 			</div>
 			<div class="service-card">
 				<h3>Perché dovresti contattarci</h3>
