--- a/seo.html
+++ b/seo.html
@@ -109,7 +109,7 @@
 				<h3>Perché dovresti contattarci</h3>
 				<p>Non siamo maghi, ninja o guru della SEO, non crediamo nei trucchi. Crediamo nella <strong>strategia</strong>.</p>
 				<p>Le nostre metodologie partono dal <strong>pubblico</strong>, ci guidano con l'analisi degli <strong>intenti di ricerca</strong> e delle <strong>keywords</strong>, ci permettono di progettare <strong>architetture del contenuto</strong> efficaci e ci portano ad ottimizzare tutti gli elementi del <strong>contenuto</strong> rilevanti per la visibilità organica (in una parola: <em><a href="download/Martino%20Mosna%20-%20Slide%20Search%20Marketing%20Connect%202018.pdf" target="_blank">PIKAC!</a></em>).</p>
-				<p>Il nostro obiettivo è quello di creare una strategia di ottimizzazione che non solo migliori il tuo <strong>posizionamento</strong>, ma che valorizzi la tua offerta e rispecchi al meglio la tua <strong>identità di marca</strong>.</p>
+				<p>Il nostro obiettivo è quello di creare un processo di ottimizzazione che non solo migliori il tuo <strong>posizionamento</strong>, ma che valorizzi la tua offerta e rispecchi al meglio la tua <strong>identità di marca</strong>.</p>
 				<a href="mailto:preventivi@33web.it" class="cta-button"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="currentColor" d="M22 6c0-1.1-.9-2-2-2H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2zm-2 0l-8 5l-8-5zm0 12H4V8l8 5l8-5z"/></svg>Chiedi una consulenza</a>
 				
 			</div>
