Pagina campagne PPC

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 					<a href="search-marketing.html">Search Marketing</a>
 					<ul class="submenu">
 						<li><a href="seo.html">Ottimizzazione (SEO)</a></li>
-						<li><a href="#ppc">Campagne PPC</a></li>
+						<li><a href="campagne-ppc.html">Campagne PPC</a></li>
 					</ul>				
 				</li>
 				<li>
