--- a/campagne-ppc.html
+++ b/campagne-ppc.html
@@ -8,24 +8,24 @@
     <link rel="apple-touch-icon" href="icons/apple-touch-icon.png">
     <link rel="manifest" href="icons/site.webmanifest">
     <link rel="shortcut icon" href="icons/favicon.ico">
-    <title>Consulenza SEO e posizionamento sui motori di ricerca | 33web</title>
-	<meta name="description" content="Ottimizza la comunicazione sui motori di ricerca per farti trovare dal tuo pubblico. Scopri cosa sappiamo fare e chiedici di più!">
+    <title>Consulenza, progettazione e gestione di campagne Google Ads | 33web</title>
+	<meta name="description" content="[DESCRIPTION]">
 	<!-- Open Graph meta tags -->
-	<meta property="og:title" content="Consulenza SEO e posizionamento sui motori di ricerca | 33web">
-	<meta property="og:description" content="Ottimizza la comunicazione sui motori di ricerca per farti trovare dal tuo pubblico. Scopri cosa sappiamo fare e chiedici di più!">
-	<meta property="og:image" content="https://www.33web.it/images/bg-seo_og.jpg">
+	<meta property="og:title" content="Consulenza, progettazione e gestione di campagne Google Ads | 33web">
+	<meta property="og:description" content="[DESCRIPTION]">
+	<meta property="og:image" content="https://www.33web.it/images/bg-search-marketing_og.jpg">
 	<meta property="og:image:width" content="1200">
 	<meta property="og:image:height" content="630">
 	<meta property="og:type" content="website">
 	<meta property="og:site_name" content="33web">
 	<meta property="og:locale" content="it_IT">
 	<meta name="twitter:card" content="summary_large_image">
-	<meta name="twitter:title" content="Consulenza SEO e posizionamento sui motori di ricerca | 33web">
-	<meta name="twitter:description" content="Ottimizza la comunicazione sui motori di ricerca per farti trovare dal tuo pubblico. Scopri cosa sappiamo fare e chiedici di più!">
-	<meta name="twitter:image" content="https://www.33web.it/images/bg-seo_og.jpg">
+	<meta name="twitter:title" content="Consulenza, progettazione e gestione di campagne Google Ads | 33web">
+	<meta name="twitter:description" content="[DESCRIPTION]">
+	<meta name="twitter:image" content="https://www.33web.it/images/bg-search-marketing_og.jpg">
 
-	<link rel="preload" fetchpriority="high" as="image" href="images/bg-seo_mobile.jpg" type="image/jpg" media="(max-width: 768px)">
-	<link rel="preload" fetchpriority="high" as="image" href="images/bg-seo.jpg" type="image/jpg" media="(min-width: 769px)">
+	<link rel="preload" fetchpriority="high" as="image" href="images/bg-search-marketing_mobile.jpg" type="image/jpg" media="(max-width: 768px)">
+	<link rel="preload" fetchpriority="high" as="image" href="images/bg-search-marketing.jpg" type="image/jpg" media="(min-width: 769px)">
 	<link rel="stylesheet" href="stili.css">
 
     <script>
@@ -41,7 +41,7 @@
 	</script>
 
 </head>
-<body class="servizi seo">
+<body class="servizi [nome-servizio]">
     <!-- Navbar -->
     <nav class="navbar">
     <div class="logo">
@@ -88,28 +88,28 @@
     <!-- Header Image -->
     <div class="header-image">
         <div class="header-logo">
-            <img src="images/seo_128.png" alt="Icona SEO">
-            <p class="subtitle">Ottimizzazione (SEO)</p>
+            <img src="images/investment_128.png" alt="33web Logo">
+            <p class="subtitle">Campagne PPC</p>
         </div>
     </div>
 
     <!-- Contenuto Principale -->
     <div class="container">
-        <h1>Ottimizza la tua comunicazione sui motori di ricerca</h1>
-        <p>Fare SEO oggi significa partire dal pubblico di clienti potenziali, conoscere i loro bisogni e capire come questi si traducono in ricerche attive sulle tecnologie di ricerca più moderne, per incontrare così le loro aspettative.</p>
+        <h1>Campagne a pagamento su Google Ads</h1>
+        <p>Google è un motore di ricerca, ma è anche un ecosistema di piattaforme che ospitano utenti in vari momenti della loro esperienza online. Gli annunci sponsorizzati di Google permettono di ottenere risultati misurabili.</p>
         
 		<div class="service-details">
 			<div class="service-card">
-				<h2>Vale ancora la pena fare SEO oggi?</h2>
-				<p>In breve, sì: finché le persone avranno bisogno di <strong>cercare online</strong>, ottimizzare la ricerca sarà essenziale, sia dal punto di vista tecnologico che comunicativo.</p>
-				<p>Rimane per questo necessario unire la conoscenza della <strong>tecnologia</strong> dei motori di ricerca con l'analisi di <strong>marketing strategico</strong>. La giusta metodologia di lavoro permette così di dare indicazioni progettuali che permettano di migliorare l'accessibilità dei contenuti e la loro <strong>reperibilità nei risultati di ricerca</strong>.</p>
-				<p><strong>Non amiamo le scorciatoie</strong> o le tattiche di corto respiro: fare SEO non significa per forza “battere l’algoritmo” o “ingannare il sistema”. Al contrario, è un <strong>processo di allineamento</strong>: capire come i motori di ricerca vedono il web e posizionare il tuo sito come una <strong>risposta valida</strong> e autorevole per chi <strong>cerca</strong> proprio ciò che offri.</p>				
+				<h2>Perché pagare se posso fare SEO?</h2>
+				<p>Le campagne PPC non sono una "scorciatoia" rispetto alla SEO, ma uno strumento potente per ottenere <strong>risultati immediati</strong>. Grazie a Google Ads puoi raggiungere un <strong>pubblico mirato</strong> proprio nel momento in cui sta cercando ciò che offri, con il massimo <strong>controllo sui costi</strong> e sulle performance.</p>
+				<p>Il PPC ti consente di posizionarti nei risultati di ricerca per <strong>parole chiave strategiche</strong>, di entrare in contatto con nuovi clienti attraverso i siti partner di Google e di sfruttare piattaforme come YouTube e Gmail per <strong>ampliare la tua visibilità</strong>.</p>
+				<p>Questa <strong>flessibilità</strong> permette alle campagne a pagamento di adattarsi rapidamente ai <strong>cambiamenti di mercato</strong> e alle esigenze del tuo business, assicurando risultati concreti e <strong>tracciabili</strong>.</p>
 			</div>
 			<div class="service-card">
 				<h3>Perché dovresti contattarci</h3>
-				<p>Non siamo maghi, ninja o guru della SEO, non crediamo nei trucchi. Crediamo nella <strong>strategia</strong>.</p>
-				<p>Le nostre metodologie partono dal <strong>pubblico</strong>, ci guidano con l'analisi degli <strong>intenti di ricerca</strong> e delle <strong>keywords</strong>, ci permettono di progettare <strong>architetture del contenuto</strong> efficaci e ci portano ad ottimizzare tutti gli elementi del <strong>contenuto</strong> rilevanti per la visibilità organica (in una parola: <em><a href="download/Martino%20Mosna%20-%20Slide%20Search%20Marketing%20Connect%202018.pdf" target="_blank">PIKAC!</a></em>).</p>
-				<p>Il nostro obiettivo è quello di creare un processo di ottimizzazione che non solo migliori il tuo <strong>posizionamento</strong>, ma che valorizzi la tua offerta e rispecchi al meglio la tua <strong>identità di marca</strong>.</p>
+				<p>Gestire le campagne PPC su Google Ads non significa seguire ciecamente le <strong>raccomandazioni</strong> di Google o affidarsi senza riserve alle sue <strong>tecnologie</strong>. Questi sistemi, come il machine learning, sono potenti, ma il loro obiettivo primario è servire gli <strong>interessi di Google</strong>.</p>
+				<p>Noi ci poniamo <strong>dalla tua parte</strong>: valutiamo quando e come sfruttare queste opportunità in base alle <strong>reali necessità</strong> del tuo business, senza sprechi. Il nostro approccio si basa sull’<strong>ottimizzazione strategica</strong>, garantendo che ogni euro investito venga impiegato con criterio per ottenere il <strong>massimo ritorno</strong> possibile.</p>
+				<p>Siamo la tua <strong>garanzia</strong> che il budget pubblicitario lavori davvero per te, con scelte <strong>ponderate e trasparenti</strong> che tengono conto dei tuoi <strong>obiettivi di business</strong>, non solo delle logiche di sistema.</p>
 				<a href="mailto:preventivi@33web.it" class="cta-button"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="currentColor" d="M22 6c0-1.1-.9-2-2-2H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2zm-2 0l-8 5l-8-5zm0 12H4V8l8 5l8-5z"/></svg>Chiedi una consulenza</a>
 				
 			</div>
@@ -128,14 +128,14 @@
 			<p>Strategie di posizionamento e visibilità nei motori di ricerca.</p>
 			<a href="search-marketing.html">></a>
 		</div>
-	
+		
 		<div class="service-box">
 			<div class="service-header">
-				<img src="images/investment_64.png" alt="Icona Campagne Pay Per Clic" class="service-icon">
-				<h3>Campagne PPC</h3>
+				<img src="images/seo_64.png" alt="Icona SEO" class="service-icon">
+				<h3>Ottimizzazione (SEO)</h3>
 			</div>
-			<p>Progettazione e gestione di campagne di ricerca orientate ai risultati.</p>
-			<a href="campagne-ppc.html">></a>
+			<p>Analisi del pubblico e ottimizzazione della visibilità organica.</p>
+			<a href="seo.html">></a>
 		</div>
 
 		<div class="service-box">
@@ -152,7 +152,7 @@
 	
 	<!-- Team Section -->
 	<div class="team">
-		<h2>Specialista SEO</h2>
+		<h2>Specialista Google Ads</h2>
 		<div class="team-profiles">
 			<div class="team-member">
 				<img src="images/martino-mosna.jpg" alt="Martino Mosna" class="team-avatar">
