--- a/search-marketing.html
+++ b/search-marketing.html
@@ -54,7 +54,7 @@
 					<a href="search-marketing.html">Search Marketing</a>
 					<ul class="submenu">
 						<li><a href="seo.html">Ottimizzazione (SEO)</a></li>
-						<li><a href="#ppc">Campagne PPC</a></li>
+						<li><a href="campagne-ppc.html">Campagne PPC</a></li>
 					</ul>				
 				</li>
 				<li>
@@ -135,7 +135,7 @@
 				<h3>Campagne PPC</h3>
 			</div>
 			<p>Progettazione e gestione di campagne di ricerca orientate ai risultati.</p>
-			<a href="#">></a>
+			<a href="campagne-ppc.html">></a>
 		</div>
 
 		<div class="service-box">
