--- a/campagne-ppc.html
+++ b/campagne-ppc.html
@@ -101,7 +101,7 @@
 		<div class="service-details">
 			<div class="service-card">
 				<h2>Perché pagare se posso fare SEO?</h2>
-				<p>Le campagne PPC non sono una "scorciatoia" rispetto alla SEO, ma uno strumento potente per ottenere <strong>risultati immediati</strong>. Grazie a Google Ads puoi raggiungere un <strong>pubblico mirato</strong> proprio nel momento in cui sta cercando ciò che offri, con il massimo <strong>controllo sui costi</strong> e sulle performance.</p>
+				<p>Le campagne Pay Per Clic (PPC) non sono una "scorciatoia" rispetto alla SEO, ma uno strumento potente per ottenere <strong>risultati immediati</strong>. Grazie a Google Ads puoi raggiungere un <strong>pubblico mirato</strong> proprio nel momento in cui sta cercando ciò che offri, con il massimo <strong>controllo sui costi</strong> e sulle performance.</p>
 				<p>Il PPC ti consente di posizionarti nei risultati di ricerca per <strong>parole chiave strategiche</strong>, di entrare in contatto con nuovi clienti attraverso i siti partner di Google e di sfruttare piattaforme come YouTube e Gmail per <strong>ampliare la tua visibilità</strong>.</p>
 				<p>Questa <strong>flessibilità</strong> permette alle campagne a pagamento di adattarsi rapidamente ai <strong>cambiamenti di mercato</strong> e alle esigenze del tuo business, assicurando risultati concreti e <strong>tracciabili</strong>.</p>
 			</div>
