Pagina Digital Analytics

--- a/digital-analytics.html
+++ b/digital-analytics.html
@@ -8,11 +8,11 @@
     <link rel="apple-touch-icon" href="icons/apple-touch-icon.png">
     <link rel="manifest" href="icons/site.webmanifest">
     <link rel="shortcut icon" href="icons/favicon.ico">
-    <title>[TITLE] | 33web</title>
-	<meta name="description" content="[DESCRIPTION]">
+    <title>Consulenza digital analytics e tool web analytics | 33web</title>
+	<meta name="description" content="Analizziamo i dati digitali e ti aiutiamo a trovare lo strumento giusto, nel rispetto delle normative. Scopri cosa sappiamo fare e chiedici di più!">
 	<!-- Open Graph meta tags -->
-	<meta property="og:title" content="[TITLE] | 33web">
-	<meta property="og:description" content="[DESCRIPTION]">
+	<meta property="og:title" content="Consulenza digital analytics e tool web analytics | 33web">
+	<meta property="og:description" content="Analizziamo i dati digitali e ti aiutiamo a trovare lo strumento giusto, nel rispetto delle normative. Scopri cosa sappiamo fare e chiedici di più!">
 	<meta property="og:image" content="https://www.33web.it/images/bg-search-marketing_og.jpg">
 	<meta property="og:image:width" content="1200">
 	<meta property="og:image:height" content="630">
@@ -20,8 +20,8 @@
 	<meta property="og:site_name" content="33web">
 	<meta property="og:locale" content="it_IT">
 	<meta name="twitter:card" content="summary_large_image">
-	<meta name="twitter:title" content="[TITLE] | 33web">
-	<meta name="twitter:description" content="[DESCRIPTION]">
+	<meta name="twitter:title" content="Consulenza digital analytics e tool web analytics | 33web">
+	<meta name="twitter:description" content="Analizziamo i dati digitali e ti aiutiamo a trovare lo strumento giusto, nel rispetto delle normative. Scopri cosa sappiamo fare e chiedici di più!">
 	<meta name="twitter:image" content="https://www.33web.it/images/bg-search-marketing_og.jpg">
 
 	<link rel="preload" fetchpriority="high" as="image" href="images/bg-search-marketing_mobile.jpg" type="image/jpg" media="(max-width: 768px)">
@@ -41,7 +41,7 @@
 	</script>
 
 </head>
-<body class="servizi [nome-servizio]">
+<body class="servizi search-marketing">
     <!-- Navbar -->
     <nav class="navbar">
     <div class="logo">
@@ -53,8 +53,8 @@
 				<li>
 					<a href="search-marketing.html">Search Marketing</a>
 					<ul class="submenu">
-						<li><a href="#seo">Ottimizzazione (SEO)</a></li>
-						<li><a href="#ppc">Campagne PPC</a></li>
+						<li><a href="seo.html">Ottimizzazione (SEO)</a></li>
+						<li><a href="campagne-ppc.html">Campagne PPC</a></li>
 					</ul>				
 				</li>
 				<li>
@@ -67,7 +67,7 @@
 					</ul>
 				</li>
 				<li>
-					<a href="#digital-analytics">Digital Analytics</a>
+					<a href="digital-analytics.html">Digital Analytics</a>
 				</li>
 			</ul>
 			<ul class="nav-secondary">
@@ -88,24 +88,30 @@
     <!-- Header Image -->
     <div class="header-image">
         <div class="header-logo">
-            <img src="images/loupe_128.png" alt="33web Logo">
-            <p class="subtitle">[Nome servizio]</p>
+            <img src="images/analytics_128.png" alt="Icona Search Marketing">
+            <p class="subtitle">Digital Analytics</p>
         </div>
     </div>
 
     <!-- Contenuto Principale -->
     <div class="container">
-        <h1>[Titolo h1 servizio]</h1>
-        <p>[Descrizione introduttiva servizio]</p>
+        <h1>Analizza i tuoi dati digitali</h1>
+        <p>Raccogliere ed analizzare i dati di traffico dei siti web è necessario per misurare correttamente le performance di qualunque attività di marketing online. Siamo al tuo fianco per affrontare ogni dettaglio, tecnico e legale.</p>
         
 		<div class="service-details">
 			<div class="service-card">
-				<h2>[Titolo h2 lancio servizio]</h2>
-				<p>[Descrizione estesa servizio]</p>
+				<h2>Ci sono alternative a Google Analytics?</h2>
+				<p>Ne abbiamo provate molte e la risposta è: dipende da cosa volete farci.</p>
+				<p>Google Analytics è uno strumento potente e ampiamente diffuso, ma non è sempre la soluzione ideale. Se cerchi una soluzione <strong>conforme a normative</strong> specifiche sulla privacy o desideri un <strong>controllo più diretto</strong> sui dati raccolti, esistono alternative valide, come Matomo o strumenti personalizzati.</p>
+				<p>Qualunque strumento di raccolta dati, però, è utile solo se i dati raccolti vengono tradotti in <strong>informazioni comprensibili</strong> e operative.</p>
+				<p>Non importa infatti quale strumento utilizzi: ciò che davvero fa la differenza è come i dati vengono <strong>presentati</strong>. Una dashboard chiara ed efficace trasforma elenchi e numeri in una <strong>guida strategica</strong> per il tuo business, rendendo le informazioni accessibili e utili.</p>
 			</div>
 			<div class="service-card">
 				<h3>Perché dovresti contattarci</h3>
-				<p>[Pitch vendita servizio]</p>
+				<p>Non ci limitiamo a installare strumenti e generare report standard. Conosciamo i ferri del mestiere e sappiamo come mostrare le informazioni per <strong>guidare le decisioni</strong> aziendali.</p>
+				<p>Ti aiutiamo a redigere un Piano di Misurazione partendo sempre dall’analisi dei tuoi <strong>obiettivi</strong>, definiamo quali metriche sono rilevanti per le tue strategie e progettiamo una <strong>raccolta dati personalizzata</strong> in collaborazione stretta con i team di sviluppo, grazie a una solida <strong>conoscenza tecnica</strong>.</p>
+				<p>Ci occupiamo della <strong>configurazione</strong> tecnica di piattaforme di analytics e sistemi di <strong>tag management</strong>, garantendo il rispetto delle normative sulla <strong>privacy</strong>, come GDPR.</p>
+				<p>Il nostro approccio ti offre una visione chiara e strutturata delle performance digitali, aiutandoti a <strong>prendere decisioni</strong> dagli esiti verificabili, basate su dati concreti.</p>
 				<a href="mailto:preventivi@33web.it" class="cta-button"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="currentColor" d="M22 6c0-1.1-.9-2-2-2H4c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2zm-2 0l-8 5l-8-5zm0 12H4V8l8 5l8-5z"/></svg>Chiedi una consulenza</a>
 				
 			</div>
@@ -114,7 +120,7 @@
 	
 	<!-- Services section -->
 	<div class="services">
-	<h2>Per la tua strategia di [Servizio]</h2>
+	<h2>Misura il successo delle attività di marketing</h2>
 	<div class="services-boxes">
 		<div class="service-box">
 			<div class="service-header">
@@ -122,7 +128,7 @@
 				<h3>Ottimizzazione (SEO)</h3>
 			</div>
 			<p>Analisi del pubblico e ottimizzazione della visibilità organica.</p>
-			<a href="#">></a>
+			<a href="seo.html">></a>
 		</div>
 	
 		<div class="service-box">
@@ -131,15 +137,15 @@
 				<h3>Campagne PPC</h3>
 			</div>
 			<p>Progettazione e gestione di campagne di ricerca orientate ai risultati.</p>
-			<a href="#">></a>
+			<a href="campagne-ppc.html">></a>
 		</div>
 
 		<div class="service-box">
 			<div class="service-header">
-				<img src="images/analytics_64.png" alt="Digital Analytics Icon" class="service-icon">
-				<h3>Digital Analytics</h3>
+				<img src="images/promotion_64.png" alt="Ecommerce Icon" class="service-icon">
+				<h3>Ecommerce</h3>
 			</div>
-			<p>Analisi dei dati per ottimizzare le tue strategie digitali.</p>
+			<p>Soluzioni per il tuo negozio online e strategie di vendita.</p>
 			<a href="#">></a>
 		</div>
 	</div>
@@ -148,7 +154,7 @@
 	
 	<!-- Team Section -->
 	<div class="team">
-		<h2>Specialista di [Servizio]</h2>
+		<h2>Specialista di Digital Analytics</h2>
 		<div class="team-profiles">
 			<div class="team-member">
 				<img src="images/martino-mosna.jpg" alt="Martino Mosna" class="team-avatar">
