--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 					</ul>
 				</li>
 				<li>
-					<a href="#digital-analytics">Digital Analytics</a>
+					<a href="digital-analytics.html">Digital Analytics</a>
 				</li>
 			</ul>
 			<ul class="nav-secondary">
@@ -139,7 +139,7 @@
 				<h3>Digital Analytics</h3>
 			</div>
 			<p>Analisi dei dati per ottimizzare le tue strategie digitali.</p>
-			<a href="#">></a>
+			<a href="digital-analytics.html">></a>
 		</div>
 	</div>
 	
