--- a/chi-siamo.html
+++ b/chi-siamo.html
@@ -67,7 +67,7 @@
 					</ul>
 				</li>
 				<li>
-					<a href="#digital-analytics">Digital Analytics</a>
+					<a href="digital-analytics.html">Digital Analytics</a>
 				</li>
 			</ul>
 			<ul class="nav-secondary">
@@ -116,7 +116,7 @@
 					<p>Inizia a lavorare come SEO in agenzia nel 2006, dal 2011 lavora quotidianamente come freelance per agenzie ed aziende.</p>
 					<p>È specialista di <a href="search-marketing.html">Search Marketing</a> perché <a href="seo.html">SEO</a> e <a href="campagne-ppc.html">Pay Per Click</a> non sono alternative, ma due modi di comunicare sullo stesso canale.</p>
 					<p>Ha ideato “<a href="download/Martino%20Mosna%20-%20Slide%20Search%20Marketing%20Connect%202018.pdf" target="_blank">PIKAC</a>“, il metodo di lavoro SEO che parte dalle persone per arrivare ai contenuti senza lasciare nulla al caso.</p>
-					<p>È esperto di <a href="#">digital analytics</a>, perché se ha una connessione HTTP, allora lo puoi misurare. E misurare ciò che serve è il primo passo per migliorare davvero.</p>
+					<p>È esperto di <a href="digital-analytics.html">digital analytics</a>, perché se ha una connessione HTTP, allora lo puoi misurare. E misurare ciò che serve è il primo passo per migliorare davvero.</p>
 					<p>Infine, ma non per importanza, è orgoglioso membro del collettivo di professionisti <a href="https://www.searchfoundry.pro/" target="_blank">Search Foundry</a>.</p>
 				</div>
 			</div>
