--- a/digital-analytics.html
+++ b/digital-analytics.html
@@ -13,7 +13,7 @@
 	<!-- Open Graph meta tags -->
 	<meta property="og:title" content="Consulenza digital analytics e tool web analytics | 33web">
 	<meta property="og:description" content="Analizziamo i dati digitali e ti aiutiamo a trovare lo strumento giusto, nel rispetto delle normative. Scopri cosa sappiamo fare e chiedici di più!">
-	<meta property="og:image" content="https://www.33web.it/images/bg-search-marketing_og.jpg">
+	<meta property="og:image" content="https://www.33web.it/images/bg-digital-analytics_og.jpg">
 	<meta property="og:image:width" content="1200">
 	<meta property="og:image:height" content="630">
 	<meta property="og:type" content="website">
@@ -22,10 +22,10 @@
 	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:title" content="Consulenza digital analytics e tool web analytics | 33web">
 	<meta name="twitter:description" content="Analizziamo i dati digitali e ti aiutiamo a trovare lo strumento giusto, nel rispetto delle normative. Scopri cosa sappiamo fare e chiedici di più!">
-	<meta name="twitter:image" content="https://www.33web.it/images/bg-search-marketing_og.jpg">
+	<meta name="twitter:image" content="https://www.33web.it/images/bg-digital-analytics_og.jpg">
 
-	<link rel="preload" fetchpriority="high" as="image" href="images/bg-search-marketing_mobile.jpg" type="image/jpg" media="(max-width: 768px)">
-	<link rel="preload" fetchpriority="high" as="image" href="images/bg-search-marketing.jpg" type="image/jpg" media="(min-width: 769px)">
+	<link rel="preload" fetchpriority="high" as="image" href="images/bg-digital-analytics_mobile.jpg" type="image/jpg" media="(max-width: 768px)">
+	<link rel="preload" fetchpriority="high" as="image" href="images/bg-digital-analytics.jpg" type="image/jpg" media="(min-width: 769px)">
 	<link rel="stylesheet" href="stili.css">
 
     <script>
@@ -41,7 +41,7 @@
 	</script>
 
 </head>
-<body class="servizi search-marketing">
+<body class="servizi digital-analytics">
     <!-- Navbar -->
     <nav class="navbar">
     <div class="logo">
