--- a/chi-siamo.html
+++ b/chi-siamo.html
@@ -194,7 +194,7 @@
 				<h3>Digital Analytics</h3>
 			</div>
 			<p>Analisi dei dati per ottimizzare le tue strategie digitali.</p>
-			<a href="#">></a>
+			<a href="digital-analytics.html">></a>
 		</div>
 	</div>
 	
