--- a/chi-siamo.html
+++ b/chi-siamo.html
@@ -58,7 +58,7 @@
 					</ul>				
 				</li>
 				<li>
-					<a href="#ecommerce">Ecommerce</a>
+					<a href="ecommerce.html">Ecommerce</a>
 				</li>
 				<li>
 					<a href="#social-media">Social Media</a>
@@ -132,7 +132,7 @@
 					<h3>Elisa Poli</h3>
 					<p>Nel 2013 inizia a lavorare nel campo della vendita on-line come ideatrice e responsabile di 33 Mani, e-commerce di rivendita prodotti artigianali trentini.</p>
 					<p>Negli anni di gestione accumula esperienza in diversi campi legati alla vendita on-line, a partire dalla gestione del catalogo, come anche gli ordini, la logistica, il rapporto con i fornitori e tutto quello che serve per gestire un negozio online, senza dimenticare il servizio clienti.</p>
-					<p>Archiviata l'attività di venditrice, oggi mette a disposizione questa conoscenza trasversale per aiutare le aziende che vogliono <a href="#">vendere online</a> ad affrontare le criticità che nascono in fase di progettazione, integrazione e gestione di qualunque ecommerce.</p>
+					<p>Archiviata l'attività di venditrice, oggi mette a disposizione questa conoscenza trasversale per aiutare le aziende che vogliono <a href="ecommerce.html">vendere online</a> ad affrontare le criticità che nascono in fase di progettazione, integrazione e gestione di qualunque ecommerce.</p>
 					<p>È particolarmente attenta agli aspetti di gestione dei progetti e per questo è considerata l'anima dello studio 33web, di cui è la titolare.</p>
 				</div>
 			</div>
@@ -176,7 +176,7 @@
 				<h3>Ecommerce</h3>
 			</div>
 			<p>Soluzioni per il tuo negozio online e strategie di vendita.</p>
-			<a href="#">></a>
+			<a href="ecommerce.html">></a>
 		</div>
 	
 		<div class="service-box">
