--- a/seo.html
+++ b/seo.html
@@ -58,7 +58,7 @@
 					</ul>				
 				</li>
 				<li>
-					<a href="#ecommerce">Ecommerce</a>
+					<a href="ecommerce.html">Ecommerce</a>
 				</li>
 				<li>
 					<a href="#social-media">Social Media</a>
