--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 					<a href="ecommerce.html">Ecommerce</a>
 				</li>
 				<li>
-					<a href="#social-media">Social Media</a>
+					<a href="social-media.html">Social Media</a>
 					<ul class="submenu">
 						<li><a href="#campagne-social">Campagne social</a></li>
 					</ul>
@@ -130,7 +130,7 @@
 				<h3>Social Media</h3>
 			</div>
 			<p>Piani editoriali e consulenza gestione piattaforme social.</p>
-			<a href="#">></a>
+			<a href="social-media.html">></a>
 		</div>
 
 		<div class="service-box">
