--- a/seo.html
+++ b/seo.html
@@ -63,7 +63,7 @@
 				<li>
 					<a href="#social-media">Social Media</a>
 					<ul class="submenu">
-						<li><a href="#campagne-social">Campagne social</a></li>
+						<li><a href="social-media.html">Campagne social</a></li>
 					</ul>
 				</li>
 				<li>
