--- a/digital-analytics.html
+++ b/digital-analytics.html
@@ -61,7 +61,7 @@
 					<a href="ecommerce.html">Ecommerce</a>
 				</li>
 				<li>
-					<a href="#social-media">Social Media</a>
+					<a href="social-media.html">Social Media</a>
 					<ul class="submenu">
 						<li><a href="#campagne-social">Campagne social</a></li>
 					</ul>
