--- a/social-media.html
+++ b/social-media.html
@@ -21,7 +21,7 @@
     <meta property="og:locale" content="it_IT">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Consulenza e strategia di comunicazione sui social media | 33web">
-    <meta name="twitter:description" content="Sviluppiamo strategie social media efficaci e gestiamo campagne pubblicitarie sui principali social network. SScopri cosa sappiamo fare e chiedici di più!">
+    <meta name="twitter:description" content="Sviluppiamo strategie social media efficaci e gestiamo campagne pubblicitarie sui principali social network. Scopri cosa sappiamo fare e chiedici di più!">
     <meta name="twitter:image" content="https://www.33web.it/images/bg-social-media_og.jpg">
 
     <link rel="preload" fetchpriority="high" as="image" href="images/bg-social-media_mobile.jpg" type="image/jpg" media="(max-width: 768px)">
