--- a/social-media.html
+++ b/social-media.html
@@ -9,10 +9,10 @@
     <link rel="manifest" href="icons/site.webmanifest">
     <link rel="shortcut icon" href="icons/favicon.ico">
     <title>Consulenza e strategia di comunicazione sui social media | 33web</title>
-    <meta name="description" content="Sviluppiamo strategie social media efficaci e gestiamo campagne pubblicitarie sui principali social network. Scopri cosa sappiamo fare e chiedici di più!">
+    <meta name="description" content="Sviluppiamo strategie social media efficaci per far crescere davvero il tuo brand. Scopri cosa sappiamo fare e chiedici di più!">
     <!-- Open Graph meta tags -->
     <meta property="og:title" content="Consulenza e strategia di comunicazione sui social media | 33web">
-    <meta property="og:description" content="Sviluppiamo strategie social media efficaci e gestiamo campagne pubblicitarie sui principali social network. Scopri cosa sappiamo fare e chiedici di più!">
+    <meta property="og:description" content="Sviluppiamo strategie social media efficaci per far crescere davvero il tuo brand. Scopri cosa sappiamo fare e chiedici di più!">
     <meta property="og:image" content="https://www.33web.it/images/bg-social-media_og.jpg">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
@@ -21,7 +21,7 @@
     <meta property="og:locale" content="it_IT">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Consulenza e strategia di comunicazione sui social media | 33web">
-    <meta name="twitter:description" content="Sviluppiamo strategie social media efficaci e gestiamo campagne pubblicitarie sui principali social network. Scopri cosa sappiamo fare e chiedici di più!">
+    <meta name="twitter:description" content="Sviluppiamo strategie social media efficaci per far crescere davvero il tuo brand. Scopri cosa sappiamo fare e chiedici di più!">
     <meta name="twitter:image" content="https://www.33web.it/images/bg-social-media_og.jpg">
 
     <link rel="preload" fetchpriority="high" as="image" href="images/bg-social-media_mobile.jpg" type="image/jpg" media="(max-width: 768px)">
