--- a/social-media.html
+++ b/social-media.html
@@ -113,15 +113,15 @@
 
     <!-- Services section -->
     <div class="services">
-        <h2>Integra i social media nel tuo marketing digitale</h2>
+        <h2>Per la tua strategia sui Social Media</h2>
         <div class="services-boxes">
             <div class="service-box">
                 <div class="service-header">
-                    <img src="images/loupe_64.png" alt="Search Marketing Icon" class="service-icon">
-                    <h3>Search Marketing</h3>
+                    <img src="images/idea_64.png" alt="Social Campaign Icon" class="service-icon">
+                    <h3>Campagne Social</h3>
                 </div>
-                <p>Strategie di posizionamento e visibilità nei motori di ricerca.</p>
-                <a href="search-marketing.html">></a>
+                <p>Progettazione e gestione di campagne sui Social Media</p>
+                <a href="#">></a>
             </div>
             
             <div class="service-box">
@@ -133,14 +133,6 @@
                 <a href="digital-analytics.html">></a>
             </div>
 
-            <div class="service-box">
-                <div class="service-header">
-                    <img src="images/promotion_64.png" alt="Ecommerce Icon" class="service-icon">
-                    <h3>Ecommerce</h3>
-                </div>
-                <p>Soluzioni per il tuo negozio online e strategie di vendita.</p>
-                <a href="ecommerce.html">></a>
-            </div>
         </div>
     </div>
 
