--- a/digital-analytics.html
+++ b/digital-analytics.html
@@ -148,6 +148,15 @@
 			<p>Soluzioni per il tuo negozio online e strategie di vendita.</p>
 			<a href="ecommerce.html">></a>
 		</div>
+		
+		<div class="service-box">
+                <div class="service-header">
+                    <img src="images/idea_64.png" alt="Social Campaign Icon" class="service-icon">
+                    <h3>Campagne Social</h3>
+                </div>
+                <p>Progettazione e gestione di campagne sui Social Media</p>
+                <a href="#">></a>
+        </div>
 	</div>
 	
 	</div>
